--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": null,
+  "name": "record-store",
   "version": "0.1.0",
-  "description": null,
+  "description": "",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --require source-map-support/register --reporter spec 'lib/**/tests/*.js'",
@@ -9,11 +9,30 @@
     "lint": "eslint runtime/*.js src/**",
     "build": "./scripts/build.js"
   },
-  "repository": null,
-  "bugs": null,
-  "homepage": null,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/markfinger/record-store.git"
+  },
+  "bugs": {
+    "url": "https://github.com/markfinger/record-store/issues"
+  },
+  "homepage": "https://github.com/markfinger/record-store#readme",
   "author": "Mark Finger",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "immutable": "^3.7.6",
+    "lodash": "^4.5.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-eslint": "^5.0.0",
+    "babel-preset-es2015": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.2.0",
+    "chai-immutable": "^1.5.3",
+    "eslint": "^2.2.0",
+    "mocha": "^2.4.5",
+    "source-map-support": "^0.4.0",
+    "yargs": "^4.1.0"
+  }
 }
