--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "record-store",
   "version": "0.1.0",
-  "description": "",
+  "description": "A store for record generation and manipulation",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --require source-map-support/register --reporter spec 'lib/**/tests/*.js'",
